--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.flaskenv
 
 npm-debug.log*
 yarn-debug.log*
@@ -28,3 +29,4 @@ __pycache__
 
 # intelliJ
 .idea
+.gradle
