--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,10 +2,12 @@ alembic==1.4.2
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+ecdsa==0.14.1
 Flask==1.1.2
 Flask-Migrate==2.5.3
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
+future==0.18.2
 gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
@@ -14,10 +16,14 @@ Mako==1.1.3
 MarkupSafe==1.1.1
 psycopg2==2.8.5
 psycopg2-binary==2.8.6
+pyasn1==0.4.8
+pycryptodome==3.3.1
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
+python-jose-cryptodome==1.3.2
 requests==2.24.0
+rsa==4.6
 six==1.15.0
 SQLAlchemy==1.3.19
 urllib3==1.25.10
